--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Format a saida dos jsons 
-spring.jackson.serialization.INDENT_OUTPUT=true
+#spring.jackson.serialization.INDENT_OUTPUT=true
 
 #Configuracao SQL Server
 
@@ -15,4 +15,9 @@ spring.jpa.hibernate.ddl-auto= update
 #Para mostrar as consultas no console
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+
+#Formatacao de datas
+#spring.jackson.date-format=dd/MM/yyyy HH:mm:ss
+
 
