--- a/pom.xml
+++ b/pom.xml
@@ -23,17 +23,17 @@
 	      <artifactId>spring-boot-starter-data-jpa</artifactId>
 	    </dependency>
 	
-<!--	    <dependency>-->
-<!--	      <groupId>com.h2database</groupId>-->
-<!--	      <artifactId>h2</artifactId>-->
-<!--	      <scope>runtime</scope>-->
-<!--	    </dependency>-->
-	    
 	    <dependency>
-	      <groupId>com.microsoft.sqlserver</groupId>
-	      <artifactId>mssql-jdbc</artifactId>
+	      <groupId>com.h2database</groupId>
+	      <artifactId>h2</artifactId>
 	      <scope>runtime</scope>
 	    </dependency>
+	    
+<!--	    <dependency>-->
+<!--	      <groupId>com.microsoft.sqlserver</groupId>-->
+<!--	      <artifactId>mssql-jdbc</artifactId>-->
+<!--	      <scope>runtime</scope>-->
+<!--	    </dependency>-->
 
 		
 		<dependency>
